--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 altgraph==0.17.2
-pyinstaller==4.5.1
-pyinstaller-hooks-contrib==2021.3
-PyQt6==6.2.1
-PyQt6-Qt6==6.2.1
-PyQt6-sip==13.1.0
+autopep8==1.6.0
+pycodestyle==2.8.0
+pyinstaller==4.8
+pyinstaller-hooks-contrib==2021.5
+PyQt6==6.2.2
+PyQt6-Qt6==6.2.2
+PyQt6-sip==13.2.0
+toml==0.10.2
